# UMT-pythonweb-hw-13

./: .dockerignore  .env.example  .gitignore  Contacts_API.postman_collection.json  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 3d69ec8f4e90_initial_tables.py  a1b2c3d4e5f6_add_role_and_refresh_token.py
docs/: conf.py  index.rst  repository.rst  schemas.rst  services.rst
docs/_build/html/: .buildinfo  api.html  database.html  genindex.html  index.html  objects.inv  py-modindex.html  repository.html  schemas.html  search.html  searchindex.js  services.html
docs/_build/html/.doctrees/: api.doctree  database.doctree  environment.pickle  index.doctree  repository.doctree  schemas.doctree  services.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/: schemas.html
docs/_build/html/_modules/src/api/: auth.html  contacts.html  users.html
docs/_build/html/_sources/: api.rst.txt  database.rst.txt
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  email.py  redis_cache.py  upload_file.py  users.py
src/services/templates/: password_reset.html  verify_email.html
tests/: conftest.py  test_api_auth_additional.py  test_config.py  test_repository_contacts.py  test_repository_users.py  test_routes_auth.py  test_routes_contacts.py  test_routes_users.py  test_services_auth.py  test_services_email.py  test_services_upload_file.py
(+9 files in other folders)
