[project]
name = "umt-pythonweb-hw-13"
version = "0.1.0"
description = "Contacts REST API with Redis cache, password reset, roles, JWT access/refresh tokens"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "fastapi-mail>=1.4.1",
    "slowapi>=0.1.9",
    "cloudinary>=1.40.0",
    "pydantic-settings>=2.4.0",
    "libgravatar>=1.0.4",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.23.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/services/templates/*", "alembic/*"]
